--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <nav class="pv3 ph3 ph4-ns" role="navigation">
   <div class="flex-l justify-between items-center center">
     <a href="https://techjintz.github.io/" class="f3 fw2 hover-white no-underline white-90 dib">
-      My New Hugo Site
+      My New Hugo Site test
     </a>
     <div class="flex-l items-center">
       
